:sparkles: Added search text structure endpoint
